fixed z-index issue of sideNav

--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -86,7 +86,6 @@
   height: 80vh;
   background-color: #8DA84E;
   border-radius: 0 0 0 500px;
-  z-index: 1100;
 
   .bg-color {
     height: 76vh;
@@ -143,6 +142,7 @@
   display: block;
   opacity: 1;
   transition: all 0.7s ease;
+  z-index: 1200;
 }
 
 .slide-out {
@@ -150,6 +150,7 @@
   // -webkit-transform: translate3d(0, 0,0);
   // transform: translate3d(100%, 0,0);
   transition: all 0.7s ease;
+  z-index: -1;
 }
 // .active-nav {
 //   border-bottom: 3px solid #678b13!important;
